# kst

./: CMakeLists.txt
cmake/: mac-release.sh
src/images/: kst.icns  make_osx_icons.sh
src/kst/: CMakeLists.txt
